--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "wiki": "https://github.com/Laravelium/laravel-sitemap/wiki"
     },
     "require": {
-        "php": ">=7.3",
-        "illuminate/support": "^8.0",
-        "illuminate/filesystem": "^8.0"
+        "php": ">=8.2",
+        "illuminate/support": ">=8.0",
+        "illuminate/filesystem": ">=8.0"
     },
     "require-dev": {
         "laravel/framework": "^8.0",
